Add locale switching capability

--- a/assets/global-styles.scss
+++ b/assets/global-styles.scss
@@ -1,4 +1,5 @@
 $nav-background-color: rgb(215, 215, 215);
+$nav-border-color--light: rgb(200, 200, 200);
 $nav-border-color: rgb(140, 140, 140);
 $site-background-color: rgb(240, 240, 240);
 $site-background-color--transparent: rgba(240, 240, 240, 0.6);
