--- a/assets/global-styles.scss
+++ b/assets/global-styles.scss
@@ -1,5 +1,5 @@
 $nav-background-color: rgb(215, 215, 215);
-$nav-border-color--light: rgb(200, 200, 200);
+$nav-border-color--light: rgb(190, 190, 190);
 $nav-border-color: rgb(140, 140, 140);
 $footer-border-color: $nav-border-color;
 $footer-background-color: $nav-background-color;
@@ -17,6 +17,7 @@ $link-main-color--hover: darkgreen;
 }
 
 .sub-container {
+  padding-left: 10px;
   flex: 1 1 0;
 }
 
