Minor style refactor, add additional settings

--- a/assets/global-styles.scss
+++ b/assets/global-styles.scss
@@ -7,6 +7,7 @@ $site-background-color: rgb(240, 240, 240);
 $site-background-color--transparent: rgba(240, 240, 240, 0.6);
 $link-main-color: green;
 $link-main-color--hover: darkgreen;
+$transparent-background-color: rgba(190, 190, 190, 0.3);
 
 .container {
   display: flex;
